--- a/supergo-page/supergo-page-service/src/main/resources/templates/orderCartHead.html
+++ b/supergo-page/supergo-page-service/src/main/resources/templates/orderCartHead.html
@@ -10,7 +10,7 @@
                 <div class="shortcut">
                     <ul class="fl">
                         <li class="f-item">品优购欢迎您！</li>
-                        <li class="f-item" th:if="${userInfo.username == null}">请<a href="http://www.supergo-sso.com/user/loginPage" target="_blank">登录</a>　<span><a href="register.html" target="_blank">免费注册</a></span></li>
+                        <li class="f-item" th:if="${userInfo.username == null}">请<a @click="login()">登录</a>　<span><a href="register.html" target="_blank">免费注册</a></span></li>
                         <li class="f-item" th:if="${userInfo.username != null}">
                             <span th:text="${userInfo.username}"></span>
                             <span id="loginOutSpan">
@@ -64,13 +64,19 @@
         new Vue({
             el: '#nav-bottom',
             methods: {
+                login:function () {
+                    //获取当前页面url
+                    var url = window.location.href;
+                    //跳转到登入页
+                    window.location.href = "http://sso.supergo.com/user/loginPage?url=" + url
+                },
                 loginOut:function () {
                     var bearerToken1 = '';
                     if(bearerToken1 != null) {
                         bearerToken1 = bearerToken;
                     }
                     $.ajax({
-                        url: "http://www.supergo-sso.com/user/loginOut",
+                        url: "http://sso.supergo.com/user/loginOut",
                         type: "get",
                         data: {
                             userId: userInfo.id
@@ -81,11 +87,11 @@
                         success: function (res) {
                             console.log(res);
                             $.ajax({
-                                url: "http://www.supergo-page.com/page/html/build/149187842868088",
+                                url: "http://page.supergo.com/page/html/build/149187842868088",
                                 type: "get",
                                 success: function (res) {
                                     //跳转到登入页
-                                    window.location.href = "http://www.supergo-sso.com/user/loginPage";
+                                    window.location.href = "http://sso.supergo.com/user/loginPage";
                                 }
                             })
                         }
