--- a/supergo-page/supergo-page-service/src/main/resources/templates/showOrderCart.html
+++ b/supergo-page/supergo-page-service/src/main/resources/templates/showOrderCart.html
@@ -30,7 +30,7 @@
 	<div class="unlogin-div" th:if="${bearerToken == null}">
 		<img src="img/icon_sprite.png"/>
 		<span>您还没有登录！登录后购物车的商品将保存到您账号中</span>
-		<a href="http://www.supergo-sso.com/user/loginPage" target="_blank">立即登录</a>
+		<a href="http://sso.supergo.com/user/loginPage" target="_blank">立即登录</a>
 	</div>
 	<div class="all-goods">
 		<span class="div-span">全部商品{{orderCartList.length}}</span>
